[workspace]
members = [
    "simulator",
    "firmware",
]

[package]
name = "walkclock"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
tinytga = "0.4"
heapless = "0.7"
embedded-graphics = "0.7"

[dependencies.time]
version = "0.3"
default-features = false

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
