[package]
name = "walkclock_fw"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "0.6.0-rc.3"
rtt-target = { version = "0.3", features=["cortex-m"] }
panic-rtt-target = { version = "0.1", features=["cortex-m"] }
embedded-graphics = "0.7"

[dependencies.stm32ral]
version = "0.7"
features = ["stm32h743v", "rtic"]

[dependencies.walkclock]
path = ".."

[features]
mco1_lse = []
mco1_hse = []
rtc_coe = []
